syntax = "proto3";

import "wall.proto";
import "posts.proto";

package foobar.news_feed;

option java_multiple_files = true;
option java_package = "foobar.news_feed";
option java_outer_classname = "NewsFeed";

service NewsFeedService {
    rpc get_news_feed(wall.WallQuery) returns (stream posts.Post) {};
}
